# Strategy-Game

./: .gitignore  .pnpm-build-allow.json  index.html  package.json  pnpm-lock.yaml
.run/: train phase1.run.xml  train phase2.run.xml  train phase3.run.xml
src/: App.tsx  index.css  main.tsx
src/AI/: TurnExecutor.ts  battleReport.ts  index.ts
src/AI/nn/: ActionSpace.ts  NNModel.ts  StateEncoder.ts
src/components/: GameCanvas.tsx  ModeSelect.tsx
src/data/: MapLayout.ts  PlayerColors.ts
src/lib/: Army.ts  Battle.ts  Combat.ts  Config.ts  GameSystem.ts  Graph.ts  Player.ts  Unit.ts
src/lib/data/: Config.ts  DefaultGameMap.ts  DefaultNeutralGarrison.ts  DefaultPlayers.ts  DefaultUnitStatsMap.ts
training/: AI-DESIGN.md
training/python/: pyproject.toml
training/python/app/: config.py  data_io.py  export_tfjs.py  model.py  trainer.py
training/python/app/scripts/: bootstrap.py  train.py
training/scripts/: generateData.ts  publishModel.ts  trainPhase1.ts  trainPhase2.ts  trainPhase3.ts
training/scripts/test/: evalAI.ts  testAI.ts  testModels.ts  testNNvsGreedy.ts  testOnly.ts  testPipeline.ts  testValue.ts  testVsGreedy.ts
training/src/: GreedyAI.ts  Opponents.ts  SampleTypes.ts  SelfPlay.ts  TrajectoryStore.ts  nodeIO.ts  setupBackend.ts  trainUtils.ts
