[project]
name = "strategy-game-training"
version = "0.1.0"
description = "PyTorch training for Strategy Game AI"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "numpy",
]

[dependency-groups]
dev = []

# https://docs.astral.sh/uv/guides/integration/pytorch/
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
